fixed github.io bullet spacing
fixed github.io bullet spacing

--- a/web115/styles/default.css
+++ b/web115/styles/default.css
@@ -40,3 +40,8 @@ figcaption.waterfallImg {
     font-style: italic;
     font-size: .9em;
 }
+
+li.web115Index {
+    padding-left: 28em;
+    padding-right: 26em;
+}
